--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/jsp/newpage/common/head.jsp=UTF-8
+encoding//WebContent/WEB-INF/jsp/newpage/common/left.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/system/admin/head.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/system/admin/top.jsp=UTF-8
 encoding/<project>=UTF-8
